Upgrade API to latest Spring Boot version. Upgrade API to Java 17